Add doxygen and graphviz support

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,6 +7,9 @@ python:
         - docs
 build:
   os: ubuntu-22.04
+  apt_packages:
+    - doxygen
+    - graphviz
   tools:
     python: "3.11"
 sphinx:
