--- a/src/catch2/meson.build
+++ b/src/catch2/meson.build
@@ -157,6 +157,7 @@ internal_headers = [
   'matchers/catch_matchers_floating_point.hpp',
   'matchers/catch_matchers_predicate.hpp',
   'matchers/catch_matchers_quantifiers.hpp',
+  'matchers/catch_matchers_range_equals.hpp',
   'matchers/catch_matchers_string.hpp',
   'matchers/catch_matchers_templated.hpp',
   'matchers/catch_matchers_vector.hpp',
@@ -251,6 +252,7 @@ internal_sources = files(
   'matchers/catch_matchers_floating_point.cpp',
   'matchers/catch_matchers_predicate.cpp',
   'matchers/catch_matchers_quantifiers.cpp',
+  'matchers/catch_matchers_range_equals.cpp',
   'matchers/catch_matchers_string.cpp',
   'matchers/catch_matchers_templated.cpp',
   'matchers/internal/catch_matchers_impl.cpp',
