Update to macos-14 images for MacOS GitHub Actions
macos-12 images will be removed on 3.12.2024

--- a/.github/workflows/mac-builds-m1.yml
+++ b/.github/workflows/mac-builds-m1.yml
@@ -1,10 +1,10 @@
-name: M1 Mac builds
+name: Arm Mac builds
 
 on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: macos-14
+    runs-on: macos-14-xlarge
     strategy:
       matrix:
         cxx:
